# ComfyUI_SuperScaler

./: README.md  __init__.py  pyproject.toml  superscaler.py
.github/workflows/: publish.yml
WF-exemple/: superscaler-Qwen-edit.json  superscaler-Zimage+nunchaku-flux.json  superscaler-sdxl+Zit.json  superscaler-sdxl+flux.json  superscaler-sdxl+nunchaku-flux.json  superscaler.json
js/: superscaler.js
