[project]
name = "ComfyUI-SuperScaler"
description = "An all-in-one, multi-pass generative upscaling and post-processing node designed to simplify complex workflows and add a professional finish to your images."
version = "1.0.3"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_SuperScaler"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "SuperScaler"
Icon = ""





















